pipeline script from SCM

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <p> :) Hello, I am the Best, This is a simple webapp.It's not that beautiful on the outside but it's beautiful on th inside
 </p>	
 <p>  Hi, Hello World!</p>
-<p> vishal testing here for 3rd time....vanilla icecream is better than all other icecream</p>
+<p> vishal testing here for 4th time using pipeline script from SCM....vanilla icecream is better than all other icecream</p>
 </html>
